--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -4,42 +4,57 @@
         <h3 style="">Kampaň (email)</h3>
     </div>
     <div class="modal-body container">
-        <form novalidate class="form-horizontal" ng-submit="save()" name="campainForm"  >
+        <form  class="form-horizontal" ng-submit="save()" name="campainForm"   >
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-6">
                     <input type="hidden" ng-model="Campain.id" interpol-model="id" server-error="id" name="id"/>
-
                     <div class="form-group">
-                        <label  for="campainName">Název</label>
-                        <input  class="form-control" type="text" id = "campainName" name="campainName" ng-model="Campain.campainName"  interpol-model="campainName" server-error="campainName"/>
-                        <div class="errors"  show-inter="campainName" >
-                            <error-message error="campainName" ></error-message>   
+                        <label  class="control-label col-sm-3" for="campainName">Název</label>
+                        <div class="col-sm-9" >
+                            <input  class="form-control input-sm" type="text" id = "campainName" name="campainName" ng-model="Campain.campainName"  interpol-model="campainName" server-error="campainName"/>
+                            <div class="errors"  show-inter="campainName" >
+                                <error-message error="campainName" ></error-message>   
+                            </div>
                         </div>
                     </div>  
 
                     <div class="form-group">
                         <input class="form-control"  type="hidden" id = "dataSourceId" name="dataSourceId" ng-model="Campain.dataSourceId"  interpol-model="dataSourceId" server-error="dataSourceId"/>
-
-                        <pre>Datový zdroj: {{datasourceSelected.name}}</pre>
-
-                        <input type="text" ng-model="datasourceSelected" placeholder="Vyhledat datový zdroj" typeahead-loading="loadingLocations"  typeahead="datasource as datasource.name for datasource in searchDataSources($viewValue) | filter:{name: $viewValue}"  typeahead-on-select="onDatasourceSelected($item)" class="form-control">
-                        <i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
-
-                        <div class="errors"  show-inter="dataSourceId" >
-                            <error-message error="dataSourceId" ></error-message>   
+                        <label  class="control-label col-sm-3" for="datasourceSelected">Datový zdroj</label>
+                        <div class="col-sm-9">
+                            <input type="text" ng-model="datasourceSelected" placeholder="Vyhledat datový zdroj" typeahead-loading="loadingLocations"  typeahead="datasource as datasource.name for datasource in searchDataSources($viewValue) | filter:{name: $viewValue}"  typeahead-on-select="onDatasourceSelected($item)" class="form-control input-sm">
+                            <i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
+                            <div class="errors"  show-inter="dataSourceId" >
+                                <error-message error="dataSourceId" ></error-message>   
+                            </div>
                         </div>
 
                     </div>  
+
+                    <div class="form-group">
+                        <label class="control-label col-sm-3"  for="recipients">Adresát</label>
+                        <div class="col-sm-9">
+                            <input  class="form-control input-sm" type="text" id = "recipients" name="recipients" ng-model="Campain.recipients"  interpol-model="recipients" server-error="recipients"/>
+                            <div class="errors"  show-inter="recipients" >
+                                <error-message error="recipients" ></error-message>   
+                            </div>
+                        </div>
+                    </div>  
+
+                    <div class="form-group">
+                        <label class="control-label col-sm-3"  for="bccRecipients">Adresát kopie</label>
+                        <div class="col-sm-9">
+                            <input  class="form-control input-sm" type="text" id = "bccRecipients" name="bccRecipients" ng-model="Campain.bccRecipients"  interpol-model="bccRecipients" server-error="bccRecipients"/>
+                            <div class="errors"  show-inter="bccRecipients" >
+                                <error-message error="bccRecipients" ></error-message>   
+                            </div>
+                        </div>
+                    </div>  
+
+
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-9">
-                    <textarea cols="60" id="rr" rows="30"  style="width: 800px;height: 300px; z-index: 100;" ng-model="Campain.emailText" >
-               
-                    </textarea>
-                </div>
-                <div class="col-md-3">
-                    <h3>Dostupné proměné</h3>
+                <div class="col-md-6 well">
+                    <h3 style="margin-top: 0;">Dostupné proměné</h3>
                     <p ng-repeat="f in datasourceSelected.dataStructure.dataStructureFields">
 
                         ###{{f.name}}###
@@ -48,36 +63,90 @@
 
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-5" >
-                    <div class="form-group">
-                        <input type="file" ng-model="files" file-change id="file" >
+            <tabset justified="true">
+                <tab>
 
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <div ng-show="loadingfile">
-                        <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
+                    <tab-heading>
+                        <i class="glyphicon glyphicon-envelope"></i> Tělo emailu
+                    </tab-heading>
+                    <div class="container">
+                        <div class="row" style="padding-top: 1em">
+                            <div class="col-md-6">
+                                <div class="form-group">
 
+                                    <label class="control-label col-sm-3"   for="recipients">Předmět</label>
+                                    <div class="col-sm-9">
+                                        <input  class="form-control input-sm" type="text" id = "subject" name="subject" ng-model="Campain.subject"  interpol-model="subject" server-error="subject"/>
+                                        <div class="errors"  show-inter="subject" >
+                                            <error-message error="subject" ></error-message>   
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                        <div class="row">
+                            <textarea cols="60" id="rr" rows="30"  class="ckeditor" style="width: 800px;height: 300px; z-index: 100;" ng-model="Campain.emailText" >
+               
+                            </textarea>
+
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label  for="campainName">Název</label>
-                    <input  class="form-control" type="text" id = "attachmentName" name="attachmentName" ng-model="Campain.attachmentName"  interpol-model="attachmentName" server-error="attachmentName"/>
-                    <div class="errors"  show-inter="attachmentName" >
-                        <error-message error="attachmentName" ></error-message>   
+                </tab>
+                <tab>
+                    <tab-heading>
+                        <i class="glyphicon glyphicon-paperclip"></i>Příloha
+                    </tab-heading>
+                    <div class="panel">
+                        <div class="row" style="padding-top: 1em">
+                            <div class="col-md-6" >
+                                <div class="form-group">
+                                    <input type="file" ng-model="files" file-change id="file" >
+
+                                </div>
+
+                                <div ng-show="loadingfile">
+                                    <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
+
+                                </div>
+
+                                <div class="form-group">
+                                    <input  class="form-control" type="text" id = "attachmentName" name="attachmentName" ng-model="Campain.attachmentName"  interpol-model="attachmentName" server-error="attachmentName"/>
+                                    <div class="errors"  show-inter="attachmentName" >
+                                        <error-message error="attachmentName" ></error-message>   
+                                    </div>
+                                </div>  
+                            </div>
+                            <div>
+                                <div class="col-md-6" >
+                                    <div class="form-group">
+                                        <label class="control-label col-sm-4"  for="customizeAttachments">Přizpůsobit přílohu</label>
+                                        <div class="col-sm-8">
+                                            <input  class="input-sm" type="checkbox" ng-change="atcangeged()" id = "customizeAttachments" name="customizeAttachments" ng-model="Campain.customizeAttachments"  interpol-model="customizeAttachments" server-error="customizeAttachments"/>
+                                            <div class="errors"  show-inter="customizeAttachments" >
+                                                <error-message error="customizeAttachments" ></error-message>   
+                                            </div>
+                                        </div>
+                                    </div>  
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
-                </div>  
-            </div>
+                </tab>
+
+            </tabset>
+
         </form>
 
     </div>
+
+
 
     <div class="modal-footer">
         <button class="btn btn-primary" ng-click="ok()">OK</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
-    <script src="js/nicEdit.js"></script>
+    <script src="js/ckeditor/ckeditor.js"></script>
 
 
 </div>
