--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -22,7 +22,8 @@
                     <div class="form-group">
                         <label class="control-label col-sm-3"  for="recipients">Adresát</label>
                         <div class="col-sm-9">
-                            <input  class="form-control input-sm" type="text" id = "recipients" name="recipients" ng-model="Campain.recipients"  interpol-model="recipients" server-error="recipients"/>
+                            <input typeahead-editable="false" ng-disabled="datasourceSelected === undefined || datasourceSelected === null || datasourceSelected === ''"  typeahead="field for field in getEmailFields($viewValue) | filter:$viewValue" class="form-control input-sm" type="text" id = "recipients" name="recipients" ng-model="Campain.recipients"  interpol-model="recipients" server-error="recipients"/>
+
                             <div class="errors"  show-inter="recipients" >
                                 <error-message error="recipients" ></error-message>   
                             </div>
@@ -32,7 +33,7 @@
 
                 </div>
                 <div class="col-md-6">
-                    
+
                     <div class="form-group">
                         <input class="form-control"  type="hidden" id = "dataSourceId" name="dataSourceId" ng-model="Campain.dataSourceId"  interpol-model="dataSourceId" server-error="dataSourceId"/>
                         <label  class="control-label col-sm-3" for="datasourceSelected">Datový zdroj</label>
@@ -45,11 +46,11 @@
                         </div>
 
                     </div>  
-                    
+
                     <div class="form-group">
                         <label class="control-label col-sm-3"  for="bccRecipients">Adresát kopie</label>
                         <div class="col-sm-9">
-                            <input  class="form-control input-sm" type="text" id = "bccRecipients" name="bccRecipients" ng-model="Campain.bccRecipients"  interpol-model="bccRecipients" server-error="bccRecipients"/>
+                            <input typeahead-editable="false" ng-disabled="datasourceSelected === undefined || datasourceSelected === null || datasourceSelected === ''"  typeahead="field for field in getEmailFields($viewValue) | filter:$viewValue" c  class="form-control input-sm" type="text" id = "bccRecipients" name="bccRecipients" ng-model="Campain.bccRecipients"  interpol-model="bccRecipients" server-error="bccRecipients"/>
                             <div class="errors"  show-inter="bccRecipients" >
                                 <error-message error="bccRecipients" ></error-message>   
                             </div>
@@ -81,20 +82,20 @@
                             </div>
                         </div>
                         <div class="row">
-                               <div class="col-md-8">
-                            <textarea cols="60" id="rr" rows="30"  class="ckeditor" style="width: 800px;height: 300px; z-index: 100;" ng-model="Campain.emailText" >
+                            <div class="col-md-8">
+                                <textarea cols="60" id="rr" rows="30"  class="ckeditor" style="width: 800px;height: 300px; z-index: 100;" ng-model="Campain.emailText" >
                
-                            </textarea>
-                               </div>
-                               <div class="col-md-4">
-                    
-                    <h4 style="margin-top: 0;">Dostupné proměné</h4>
-                    <p ng-repeat="f in datasourceSelected.dataStructure.dataStructureFields">
+                                </textarea>
+                            </div>
+                            <div class="col-md-4">
 
-                        ###{{f.name}}###
-                    </p>
+                                <h4 style="margin-top: 0;">Dostupné proměné</h4>
+                                <p ng-repeat="f in datasourceSelected.dataStructure.dataStructureFields">
 
-                               </div>
+                                    ###{{f.name}}###
+                                </p>
+
+                            </div>
                         </div>
                     </div>
                 </tab>
@@ -102,53 +103,86 @@
                     <tab-heading>
                         <i class="glyphicon glyphicon-paperclip"></i>Příloha
                     </tab-heading>
-                    <div class="panel">
+
+
+
+
+
+
+
+                    <div class="container">
                         <div class="row" style="padding-top: 1em">
-                            <div class="col-md-6" >
-                                <div class="form-group">
-                                    <input type="file" ng-model="files" file-change id="file" >
-
-                                </div>
-                                <div ng-show="loadingfile">
-                                    <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
-
-                                </div>
+                            <div class="col-md-6">
 
                                 <div class="form-group">
-                                    <input  class="form-control" type="text" id = "attachmentName" name="attachmentName" ng-model="Campain.attachmentName"  interpol-model="attachmentName" server-error="attachmentName"/>
-                                    <div class="errors"  show-inter="attachmentName" >
-                                        <error-message error="attachmentName" ></error-message>   
-                                    </div>
-                                </div>  
-                            </div>
-                            <div>
-                                <div class="col-md-6" >
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-4"  for="customizeAttachments">Přizpůsobit přílohu</label>
-                                        <div class="col-sm-8">
-                                            <input  class="input-sm" type="checkbox" ng-change="atcangeged()" id = "customizeAttachments" name="customizeAttachments" ng-model="Campain.customizeAttachments"  interpol-model="customizeAttachments" server-error="customizeAttachments"/>
-                                            <div class="errors"  show-inter="customizeAttachments" >
-                                                <error-message error="customizeAttachments" ></error-message>   
-                                            </div>
+                                    <label class="control-label col-sm-3"   for="attachmentOutputName">Název přílohy</label>
+                                    <div class="col-sm-9">
+                                        <input  class="form-control input-sm" type="text" id = "attachmentOutputName" name="attachmentOutputName" ng-model="Campain.attachmentOutputName"  interpol-model="attachmentOutputName" server-error="attachmentOutputName"/>
+                                        <div class="errors"  show-inter="attachmentOutputName" >
+                                            <error-message error="attachmentOutputName" ></error-message>   
                                         </div>
-                                    </div>  
-                                </div>
+                                    </div>
+                                </div> 
+
                             </div>
                         </div>
+
+
+
                         <div class="row">
-                                      <iframe class="col-md-8" ng-src="{{templateUrl}}"    height="400px" >
-                                </iframe>
-                            <div class="col-md-4" >
-                                <h4 style="margin-top: 0;">Použité proměné</h4>
+                               <div class="btn-group">
+        <button type="button" class="btn btn-primary" ng-model="previewType" btn-radio="'pdf'">Pdf</button>
+        <button type="button" class="btn btn-primary" ng-model="previewType" btn-radio="'html'">Html</button>
+
+    </div>
+                            <iframe class="col-md-7" ng-src="{{templateUrl}}"    height="400px" >
+                            </iframe>
+                            <div class="col-md-5">
+                                 <pre>
+                                    <p>Název souboru: {{ Campain.attachmentName }} </p>
+                                      <p>Typ souboru: {{ Campain.attachmentFileType }} </p>
+                                </pre>
+                                <div class="form-group">
+                                    <label class="control-label col-sm-4"  for="customizeAttachments">Nahrát soubor</label>
+                                    <div class="col-sm-8">
+                                        <input type="file" ng-model="files" file-change id="file" >
+                                    </div>
+                                </div>  
+
+
+
+                                <div ng-show="loadingfile">
+                                    <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="control-label col-sm-4"  for="customizeAttachments">Přizpůsobit přílohu</label>
+                                    <div class="col-sm-8">
+                                        <input  class="input-sm" ng-disabled="Campain.attachmentFileSystemName === undefined || Campain.attachmentFileSystemName === null" type="checkbox" ng-change="customizeAttachment()" id = "customizeAttachments" name="customizeAttachments" ng-model="Campain.customizeAttachments"  interpol-model="customizeAttachments" server-error="customizeAttachments"/>
+                                        <div class="errors"  show-inter="customizeAttachments" >
+                                            <error-message error="customizeAttachments" ></error-message>   
+                                        </div>
+                                    </div>
+                                </div>  
+
+                                <div class="form-group">
+                                    <input  class="form-control" type="hidden" id = "attachmentFileSystemName" name="attachmentFileSystemName" ng-model="Campain.attachmentFileSystemName" />
+                                    <input  class="form-control" type="hidden" id = "attachmentName" name="attachmentName" ng-model="Campain.attachmentName" />
+                                     <input  class="form-control" type="hidden" id = "attachmentType" name="attachmentType" ng-model="Campain.attachmentType" />
+                                </div> 
+
+
+
+
+                                <h4 style="margin-top: 0;">Použadované proměné</h4>
                                 <p ng-repeat="f in templateFields">
                                     ###{{f}}### 
                                 </p>
+
                             </div>
-                            
-                      
-                          
                         </div>
                     </div>
+
                 </tab>
             </tabset>
 
@@ -157,11 +191,11 @@
 
 
 
-<div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-</div>
-<script src="js/ckeditor/ckeditor.js"></script>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
+    <script src="js/ckeditor/ckeditor.js"></script>
 
 
 </div>
