--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -1,7 +1,9 @@
 <div class="row>" >
     <ol class="breadcrumb">
-        <li><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-        <li class="active"><i class="fa fa-table"></i> Tables</li>
+        <li><a href="index.html"><i class="fa fa-home"></i>&nbsp;Masmailler</a></li>
+        <li class="active"><i class="fa fa-envelope"></i>&nbsp;Kampaně</li>
+        <li class="active"><a href="#campains/type/EDIT" ><i class="fa fa-envelope"></i>&nbsp;Kampaně rozpracované</li></a>
+        <li class="active"><i class="fa fa-edit"></i>&nbsp;editovat</li>
     </ol>
 </div>
 
