--- a/src/main/webapp/WEB-INF/ui/views/campain/stats.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/stats.html
@@ -1,4 +1,11 @@
+<div class="row>" >
+    <ol class="breadcrumb">
+        <li><a href="index.html"><i class="fa fa-home"></i>&nbsp;Masmailler</a></li>
+        <li ><i class="fa fa-list"></i>&nbsp;Kampaně</li>
+        <li ><i class="fa fa-list"></i>&nbsp;Statistiky</li>
 
+    </ol>
+</div>
 <div class="row">
     <div class="col-lg-12">
         <h2 style="
