--- a/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
@@ -1,3 +1,11 @@
+<div class="row>" >
+    <ol class="breadcrumb">
+        <li><a href="index.html"><i class="fa fa-home"></i>&nbsp;Masmailler</a></li>
+        <li ><i class="fa fa-list"></i>&nbsp;Datové zdroje</li>
+        <li ><i class="fa fa-list"></i>&nbsp;Zobrazit</li>
+        <li class="active"><i class="fa fa-envelope"></i>&nbsp; {{DataSource.name}}</li>
+    </ol>
+</div>
 
 
 <div class="row">
@@ -10,69 +18,68 @@
 <div  class="row">
 
 
-        <div   class="col-md-4 form-horizontal">
+    <div   class="col-md-4 form-horizontal">
 
 
-            <div class="form-group">
-                <label class="control-label col-sm-3"  for="name">Název</label>
-                <div class="col-sm-9">
-                    <input disabled="disabled" class="input-sm form-control" type="text" id = "name" name="name" ng-model="DataSource.name"/>
+        <div class="form-group">
+            <label class="control-label col-sm-3"  for="name">Název</label>
+            <div class="col-sm-9">
+                <input disabled="disabled" class="input-sm form-control" type="text" id = "name" name="name" ng-model="DataSource.name"/>
 
-                </div>
-            </div> 
-            <div class="form-group">
-                <label class="control-label col-sm-3"  for="name">kategorie</label>
-                <div class="col-sm-9">
-                    <input disabled="disabled" class="input-sm form-control" type="text" id = "name" name="category" ng-model="DataSource.category"/>
-
-                </div>
-            </div> 
-            <div class="form-group">
-                <label class="control-label col-sm-3"  for="description">description</label>
-                <div class="col-sm-9">
-                    <input disabled="disabled" class="input-sm form-control" type="text" id = "description" name="description" ng-model="DataSource.description" />
-
-                </div>
-            </div> 
-
-        </div>
-        <div class="col-lg-12">
-            <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
-                <thead>
-                    <tr>
-                        <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                            {{f.name}}</th>
-                    </tr>
-                    <tr>
-                        <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                <div class="input-group">
-                    <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
-                    <div class="input-group-btn">
-                        <button class="btn btn-default"  ng-click="search(f)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-
-                </th>
-                </tr> 
-
-                </thead>
-
-                <tr ng-repeat="row in dataSourceRows" >
-                    <td ng-repeat="field in row.dataSourceFields" >
-                        {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
-                    </td>
-                </tr>
-            </table>
-            <pagination   max-size = "10" total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
-
-        </div>
-        <div class="row " >
-            <hr>
-            <div class="col-lg-12 text-right">
-                <a class="btn btn-primary" ng-href="#/datasource/edit/{{DataSource.id}}" >Upravit</a>
-                <button class="btn btn-danger"  ng-click="openDeleteDialog(DataSource.id, d.name)" >Smazat</button>
             </div>
+        </div> 
+        <div class="form-group">
+            <label class="control-label col-sm-3"  for="name">kategorie</label>
+            <div class="col-sm-9">
+                <input disabled="disabled" class="input-sm form-control" type="text" id = "name" name="category" ng-model="DataSource.category"/>
+
+            </div>
+        </div> 
+        <div class="form-group">
+            <label class="control-label col-sm-3"  for="description">description</label>
+            <div class="col-sm-9">
+                <input disabled="disabled" class="input-sm form-control" type="text" id = "description" name="description" ng-model="DataSource.description" />
+
+            </div>
+        </div> 
+
+    </div>
+    <div class="col-lg-12">
+        <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
+            <thead>
+                <tr>
+                    <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
+                        {{f.name}}</th>
+                </tr>
+                <tr>
+                    <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
+            <div class="input-group">
+                <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
+                <div class="input-group-btn">
+                    <button class="btn btn-default"  ng-click="search(f)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                </div>
+            </div>
+
+            </th>
+            </tr> 
+
+            </thead>
+
+            <tr ng-repeat="row in dataSourceRows" >
+                <td ng-repeat="field in row.dataSourceFields" >
+                    {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
+                </td>
+            </tr>
+        </table>
+        <pagination   max-size = "10" total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
+
+    </div>
+    <div class="row " >
+        <hr>
+        <div class="col-lg-12 text-right">
+            <a class="btn btn-primary" ng-href="#/datasource/edit/{{DataSource.id}}" >Upravit</a>
+            <button class="btn btn-danger"  ng-click="openDeleteDialog(DataSource.id, d.name)" >Smazat</button>
         </div>
     </div>
+</div>
 
-   
