--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -1,3 +1,12 @@
+<div class="row>" >
+    <ol class="breadcrumb">
+        <li><a href="index.html"><i class="fa fa-home"></i>&nbsp;Masmailler</a></li>
+        <li ><i class="fa fa-list"></i>&nbsp;Datové zdroje</li>
+                <li ><i class="fa fa-edit"></i>&nbsp;Upravit</li>
+                <li class="active"><i class="fa fa-envelope"></i>&nbsp; {{DataSource.name}}</li>
+    </ol>
+</div>
+
 
 <div class="row">
     <div class="col-lg-12">
