--- a/src/main/webapp/WEB-INF/ui/views/datasource/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/list.html
@@ -1,4 +1,9 @@
-
+<div class="row>" >
+    <ol class="breadcrumb">
+        <li><a href="index.html"><i class="fa fa-home"></i>&nbsp;Masmailler</a></li>
+        <li class="active"><i class="fa fa-envelope"></i>&nbsp;Datové zdroje</li>
+    </ol>
+</div>
 
 <div class="row">
     <div class="col-lg-12">
